# notebooks

./: README.md  evaluation.ipynb  finetune.ipynb  generate_eval_data.ipynb  prepare_labelled_data_create_eval.ipynb  prepare_nps_survey_data_for_labelling.ipynb
de-anon-app/: README.md  pyproject.toml
de-anon-app/data/: anonymized_only.csv
de-anon-app/de_anon_app/: app.py
