[tool.poetry]
name = "de-anon-app"
version = "0.1.0"
description = "App used for preparing and de-anonymising evaluation data used"
authors = ["Markus Nutz <markus.nutz@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.75.0"
protobuf = "^3.14.0"
watchdog = "^1.0.2"
st-annotated-text = "^1.1.0"
pickledb = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
